* added readme.md

--- a/demo.html
+++ b/demo.html
@@ -22,10 +22,7 @@
 
 </div>
 
-<!--<script src="demo.bundle.js"></script>-->
-<script src="dist/graphicEqualizer.js"></script>
-<script src="dist/graphicEqualizerUi.js"></script>
-<script src="demo.js"></script>
+<script src="demo.bundle.js"></script>
 
 </body>
 </html>
