--- a/tunaDemo.html
+++ b/tunaDemo.html
@@ -2,16 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Audio Demo</title>
-
-<style>
-.band {float: left;}
-</style>
+<title>Tuna Demo</title>
 
 <script src="tuna.min.js"></script>
 </head>
 <body>
-<h1>Graphic Equalizer</h1>
+<h1>Tuna!</h1>
 
 <div class="source">
 <label>Source: <input id="source" type="text" accesskey="s"></label>
@@ -19,16 +15,12 @@
 </audio>
 </div>
 <hr>
-<div class="eq" id="eq">
-
-</div>
-
-<div class="phaser" id="phaser">
+<div class="tuna" id="tuna">
 
 </div>
 
 
-<script src="demo.bundle.js"></script>
+<script src="tunaDemo.bundle.js"></script>
 
 </body>
 </html>
